<resources>
    <string name="app_name">ConPGames</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="textPlaceHolder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string-array name="province_list">
        <item>Alberta</item>
        <item>British-Columbia</item>
        <item>Manitoba</item>
        <item>New Brunswick</item>
        <item>Newfoundland and Labrador</item>
        <item>Northwest Territories</item>
        <item>Nova Scotia</item>
        <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Yukon</item>
    </string-array>

    <string name="textPlaceHolder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="about">About</string>
    <string name="shopping_and_order">Shopping and Order</string>
    <string name="viewing_orders">Viewing orders</string>
    <string name="account_and_settings">Account and Settings</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="about_text">This application was designed and programmed for the SEG3525 (Analysis and Design of User Interfaces) Course at the University of Ottawa by Alexandre Stelzig and Mathieu Perron.</string>
    <string name="language">Country and Language</string>
    <string name="results_page">Results page</string>
    <string name="number_of_results_per_page">Number of results per page</string>


</resources>
